--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,12 @@
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+
+    }
   },
   "ts-node": {
     "compilerOptions": {
