--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ on:
     branches: [master]
 jobs:
   pipeline: 
-    runs-on: ubuntu-latest
+    runs-on: windows
     strategy:
       matrix:
-        node-version: [17.x]
+        node-version: [16.x]
     
 
     steps:
