--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ on:
     branches: [master]
 jobs:
   pipeline: 
-    runs-on: windows-2019
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [17.x]
     
 
     steps:
@@ -32,10 +32,10 @@ jobs:
       - name: unit testing
         run: npm run test:unit
         if: always()
-      - name: build storybook
-        run: npm run storybook:build
-        if: always()
-      - name: screenshot testing
-        run: npm run test:ui:ci
-        if: always()
+      # - name: build storybook
+      #   run: npm run storybook:build
+      #   if: always()
+      # - name: screenshot testing
+      #   run: npm run test:ui:ci
+      #   if: always()
      
