add isolated module, fix all

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "paths": {
       "*": ["./src/*"]
 
-    }
+    },
+    "isolatedModules": true
   },
   "ts-node": {
     "compilerOptions": {
